# ragbrain

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements-aws.txt  requirements.txt
backend/ragbrain/: __init__.py  config.py
backend/ragbrain/api/: main.py
backend/ragbrain/api/routes/: capture.py  documents.py  health.py  namespaces.py  pending.py  query.py  upload.py
backend/ragbrain/chunking/strategies/: __init__.py
backend/ragbrain/cli/: __init__.py  __main__.py  dump_cmd.py  import_cmd.py  migrate_cmd.py  namespace_cmd.py
backend/ragbrain/providers/: __init__.py  base.py  factories.py
backend/ragbrain/providers/embeddings/: __init__.py  bedrock.py  cohere.py  fallback.py  mixedbread.py  ollama.py  openai.py
backend/ragbrain/providers/llm/: __init__.py  anthropic.py  bedrock.py  fallback.py  ollama.py  openai_llm.py
backend/ragbrain/providers/namespace/: __init__.py  dynamodb.py  redis_provider.py  sqlite.py
backend/ragbrain/providers/reranker/: __init__.py  base.py  cohere.py  ollama.py  simple.py
backend/ragbrain/providers/vectordb/: __init__.py  chroma.py  pinecone_provider.py  qdrant.py  s3vectors.py
backend/ragbrain/rag/: pipeline.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_aws_providers.py  test_chunking.py  test_config.py  test_pipeline.py  test_providers.py
frontend/: index.html  package.json
frontend/src/: App.vue  main.js
frontend/src/api/: client.js
frontend/src/pages/: Home.vue  Namespaces.vue  Query.vue
